--- a/index.html
+++ b/index.html
@@ -3,22 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-   <script>
-        var isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
-        var viewport = document.querySelector("meta[name=viewport]");
-        
-        function setViewport() {
-            if (isMobile) {
-                viewport.setAttribute('content', 'width=device-width, initial-scale=1');
-            } else {
-                viewport.setAttribute('content', 'width=1280');
-            }
-        }
-        
-        // Call the setViewport function when the page loads
-        window.addEventListener('load', setViewport);
-    </script>
+  <meta name="viewport" content="width=1280">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <title>ArtRent</title>
 
   <!-- Google Fonts -->
